ed-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ed-mongodeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
